syntax = "proto3";
option go_package = "proto/";

/*
  Client batch refers to a client request batch, or a client response batch
  Client request batch is sent by a client once it has collected a batch of client requests
  Client response batch is sent by a replica node
*/

message SingleOperation {
  string command = 1;
}

message ClientBatch {
  string unique_id = 1;
  repeated SingleOperation requests = 2;
  int64 sender = 3;
}

/*
  replica batch refers to a single value proposed in a consensus message
*/

message ReplicaBatch {
  string unique_id = 1;
  repeated ClientBatch requests = 2;
  int64 sender = 3;
}

/*
  Status is sent by a client to inform replicas about actions that include, but not limited to
  1. To establish connections to other nodes
  2. To write the logs to files
  3. Bootstrap consensus
*/

message Status {
  int32 type = 1; // 1 for bootstrap, 2 for log print, 3 consensus start
  string note = 2;
  int64 sender = 3;
}

/*
  PaxosConsensus defines the single consensus proto message type used for Paxos
*/

message PaxosConsensus {
  int32 sender = 1;
  int32 receiver = 2;

  int32 type = 3; // 1-prepare, 2-promise, 3-propose, 4-accept, 5 internal timeout
  string note = 4;

  int32 instance_number = 5; // initial id for prepare messages, instance id for propose message
  int32 ballot = 6;
  int32 view = 7;

  message instance{
    int32 number = 1;
    int32 ballot = 2;
    ReplicaBatch value = 3;
  }
  repeated instance promiseReply = 8;
  ReplicaBatch propose_value = 9;
  repeated instance decided_values = 10; // decided value for last instances
}

/*
  RaftConsensus defines the single consensus proto message type used for Raft
*/

message RaftConsensus{
  int32 sender = 1; // leader id for append request, candidate id for leader request
  int32 receiver = 2;

  int32 type = 3; // 1-append request, 2-append response, 3-leader request, 4-leader response, 5 internal timeout
  string note = 4;

  int64 term = 5; // for append entry, append response, leader request, leader response
  int64 prevLogIndex = 6; // for append request the prevLogIndex, for append Response the prevLogIndex of the append request in case of failure, last log index for leader request
  int64 prevLogTerm = 7; // for append request the prev log term, for leader request the last log term
  string prevLogValues = 8; // for append request

  message entry {
    ReplicaBatch value = 1;
    int64 term = 2;
  }

  repeated entry entries = 9; // for append request
  int64 leaderCommit = 10; // for append request

  bool success = 11; // for append response, for vote granted in leader response
}